# berry-api

./: .augment-guidelines  .cnb.yml  .dockerignore  .env  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  2025-07-19-this-session-is-being-continued-from-a-previous-co.txt  API_REFERENCE.md  ARCHITECTURE.md  BACKEND_ERROR_HANDLING.md  CHANGELOG.md  Cargo.toml  DOCKER_BUILD.md  DOCKER_README.md  Dockerfile  Dockerfile.prebuilt  ERROR_HANDLING_REFACTOR.md  HEALTH_CHECK_CONSISTENCY_IMPROVEMENT.md  LICENSE  MIXED_PROVIDER_HEALTH_CHECK_FIX.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  WORKSPACE_STRUCTURE.md  config-example.toml  config_example.toml  config_simple.toml  config_simple_test.toml  config_smart_health_check.toml  config_test_new_features.toml  debug_demo.sh  dependency-graph.md  docker-compose.yml  smart_ai_example.toml  test_auth.sh  test_config.toml  test_config_advanced.toml  test_new_features.md  (+2 more)
.augment/rules/: riper.md
.github/workflows/: automerge.yml  ci.yml  docker_release.yml  rust_release.yml
.ide/: Dockerfile
Usage_Guide/: AUTH_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  HEALTH_CHECK_UPGRADE.md  IMPLEMENTATION_SUMMARY.md
api/: Cargo.toml  build.rs  run_tests.sh
api/examples/: debug_logging_demo.rs  smart_health_check_demo.rs
api/src/: app.rs  lib.rs  static_files.rs
api/src/auth/: middleware.rs  mod.rs  rate_limit.rs  tests.rs  types.rs
api/src/config/: loader.rs  mod.rs  model.rs  tests.rs
api/src/loadbalance/: health_checker.rs  manager.rs  manager_tests.rs  mod.rs  selector.rs  service.rs  smart_ai_health.rs
api/src/relay/client/: claude.rs  factory.rs  mod.rs  openai.rs  tests.rs  types.rs
api/src/relay/handler/: error_handling_test.rs  loadbalanced.rs  mod.rs  openai.rs  types.rs
api/src/relay/openai/: completions.rs  mod.rs  model.rs
api/src/router/: admin.rs  api.rs  chat.rs  health.rs  metrics.rs  mod.rs  models.rs  relay.rs  router.rs  smart_ai.rs  tests.rs
api/tests/: auto_recovery_test.rs  debug_logging_test.rs  health_check_integration_test.rs  initial_health_check_test.rs  internal_retry_test.rs  unhealthy_backend_request_test.rs
berry-api/: Cargo.toml  build.rs
berry-api/migrations/: 20240719000000_create_users_table.sql
berry-api/src/: app.rs  app_route_based.rs  lib.rs  main.rs  observability.rs  static_files.rs
berry-api/src/database/: mod.rs
berry-api/src/handlers/: mod.rs  users.rs
berry-api/src/middleware/: metrics.rs  mod.rs
berry-api/src/models/: mod.rs  user.rs
berry-api/src/observability/: batch_metrics.rs
berry-api/src/repositories/: user.rs
berry-api/src/router/: admin.rs  chat.rs  health.rs  metrics.rs  mod.rs  models.rs  monitoring.rs  router.rs  routes.rs  smart_ai.rs  tests.rs  users.rs
berry-cli/: Cargo.toml
berry-cli/src/: main.rs
berry-core/: Cargo.toml
berry-core/src/: lib.rs
berry-core/src/auth/: middleware.rs  mod.rs  rate_limit.rs  tests.rs  types.rs
berry-core/src/client/: claude.rs  factory.rs  gemini.rs  mod.rs  openai.rs  registry.rs  traits.rs  types.rs
berry-core/src/config/: loader.rs  mod.rs  model.rs  tests.rs
berry-loadbalance/: Cargo.toml
berry-loadbalance/src/: lib.rs
berry-loadbalance/src/loadbalance/: cache.rs  health_checker.rs  manager.rs  manager_tests.rs  mod.rs  route_selector.rs  selector.rs  service.rs  smart_ai_health.rs  traits.rs
berry-loadbalance/src/route_selector/: adapter.rs  mod.rs  traits.rs  types.rs
berry-relay/: Cargo.toml
berry-relay/src/: lib.rs
berry-relay/src/relay/client/: factory.rs  gemini.rs  mod.rs  tests.rs  traits.rs  types.rs
berry-relay/src/relay/handler/: error_handling_test.rs  loadbalanced.rs  mod.rs  route_based.rs  types.rs
docs/: ARCHITECTURE.md  BACKEND_TYPE_CONFIG_EXAMPLE.toml  CLIENT_MODULARIZATION.md  COMPLETION_SUMMARY.md  CONFIGURATION_EXAMPLES.md  DEBUG_LOGGING_GUIDE.md  DOCUMENTATION_INDEX.md  ERROR_HANDLING_IMPROVEMENTS.md  FINAL_IMPLEMENTATION.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  OPTIMIZATION_RECOMMENDATIONS.md  PROJECT_OVERVIEW.md  api-guide.md  api-reference.md  architecture.md  backend_selection_api.md  batch-metrics.md  cli-tool.md  configuration.md  contributing.md  docker-build.md  health-checks-and-fault-handling.md  introduction.md  load-balancing-strategies.md  monitoring-and-observability.md  performance-optimization.md  production-deployment.md  quickstart.md  route-selector-design.md  route-selector-features.md  route-selector-guide.md  route-selector-implementation.md  route-selector-migration.md  route-selector-module-structure.md  route-selector-overview.md  smart_ai_api.md  smart_ai_loadbalancer.md  testing-and-debugging.md  troubleshooting.md
entity/: Cargo.toml
entity/src/: user.rs
examples/: backend_health_checker.py  backend_usage_examples.md  custom_client_plugin.rs  initial_health_check_demo.rs  smart_ai_monitoring.py  streaming_error_handling_fix.md  test_keepalive_fix.md  test_model_names.sh
migration/src/: m20220101_000001_create_table.rs
public/: 404.html  health-data.json  index.html  index.txt
public/_next/static/chunks/: 588-f1ba36a4bb890f65.js  684-2c6d287d0cb08653.js  main-5dfb898f899f21d5.js  main-app-8d0073aa7ec615b5.js  webpack-5233a064fdac02a0.js
public/_next/static/chunks/app/: layout-41540dd789b7880c.js  page-56d4bf48092ef39f.js
public/_next/static/css/: 19a8ea32ff0625ef.css
scripts/: test-release-build.sh  test_backend_selection.sh  test_smart_ai_api.sh  test_streaming_errors.sh
service/: Cargo.toml
service/src/: mutation.rs
src/: lib.rs  main.rs
src/relay/: mod.rs  openai.rs
src/relay/openai/: completions.rs
src/router/: relay.rs  router.rs
user_guide/: API_KEY_UPDATE.md  API_REFERENCE.md  SMART_HEALTH_CHECK.md  USAGE_GUIDE.md
