[package]
name = "berry-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bytes = "1.10.1"
eventsource-stream = "0.2.3"
futures = "0.3.31"
headers = "0.4.0"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
