[package]
name = "berry-api"
version = "0.1.0"
edition = "2021"
description = "Berry API server - AI API load balancing service"
build = "build.rs"

[[bin]]
name = "berry-api"
path = "src/main.rs"

[dependencies]
berry-core = { path = "../berry-core" }
berry-loadbalance = { path = "../berry-loadbalance" }
berry-relay = { path = "../berry-relay" }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
headers = { workspace = true }
include_dir = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true, optional = true }
axum-prometheus = { workspace = true, optional = true }

[build-dependencies]
vergen-git2 = { workspace = true }
anyhow = { workspace = true }



[features]
default = []
observability = ["prometheus", "axum-prometheus"]

[dev-dependencies]
axum-test = { workspace = true }
