[package]
name = "berry-cli"
version = "0.1.0"
edition = "2021"
description = "Command line tools for Berry API management"

[[bin]]
name = "berry-cli"
path = "src/main.rs"

[dependencies]
berry-core = { path = "../berry-core" }
berry-loadbalance = { path = "../berry-loadbalance" }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
