[package]
name = "berry-loadbalance"
version = "0.1.0"
edition = "2021"
description = "Load balancing and health checking library for Berry API"

[dependencies]
berry-core = { path = "../berry-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
once_cell = "1.19.0"

[dev-dependencies]
axum-test = { workspace = true }

[lints]
workspace = true