[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "1.1.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",         # `DATABASE_DRIVER` feature
]

# [dev-dependencies]
# tokio = { version = "1.45.0", features = ["full"] }

# [features]
# mock = ["sea-orm/mock"]

# [[test]]
# name = "mock"
# required-features = ["mock"]